updated database connection issue with services, fixxed some issue with the Services
